--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
 pyap
 flask
-spacy
 selenium
 Google-Search-API
 beautifulsoup4
 sklearn
 nltk
 requests
-spacy
 html2text
 elasticsearch
-numpy
-Pillow
-pytesseract
-matplotlib
-scipy
 readability-lxml
+gensim
+haul
+fuzzywuzzy
+pandas
+python-Levenshtein
