--- a/config.json.template
+++ b/config.json.template
@@ -1,5 +1,6 @@
 {
     "es":"http://localhost:9200/",
     "nlp_service":"http://localhost:9000",
-    "port":5000
+    "port":5000,
+    "platform":"MAC"
 }
