--- a/config.json.template
+++ b/config.json.template
@@ -5,6 +5,7 @@
     "platform":"MAC",
     "butler_index":"butler",
     "start_num_pages":1,
+    "page_threads":1,
     "silos":[],
     "chrome_loc":"/Applications/Google\\ Chrome.app/Contents/MacOS/Google\\ Chrome"
 }
