--- a/config.json.template
+++ b/config.json.template
@@ -12,4 +12,8 @@
     "star_search":false,
     "star_search_auth_u":"user",
     "star_search_auth_p":"pass",
+    "cdr_search":false,
+    "cdr_url":"https://api",
+    "cdr_u":"uname",
+    "cdr_p":"pass"
 }
