--- a/config.json.template
+++ b/config.json.template
@@ -15,5 +15,6 @@
     "cdr_search":false,
     "cdr_url":"https://api",
     "cdr_u":"uname",
-    "cdr_p":"pass"
+    "cdr_p":"pass",
+    "search_boxes":[]
 }
